--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Type O Negative</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preload" href="assets/fonts/metal-mania-v22-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 <body>
 
