* Added padding on body * Added footer text and icon * Added horizontal footer line as pseudo-element * Added hover effects on member and album images

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </main><!-- end main -->
 
     <footer class="footer">
-
+        <p class="footer__text">Made with <img src="img/heart-copy.svg" alt="" class="icon-heart"> by <a href="https://github.com/Islandstone89" class="footer__link">Islandstone</a></p>
     </footer><!-- end footer -->
 
 </body>
